[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://Menus/game_over_menu.gd" id="1_c28ps"]

[node name="GameOverMenu" type="CanvasLayer"]
script = ExtResource("1_c28ps")

[node name="Overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.439216)

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -256.0
offset_right = 256.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 9

[node name="GameOverTitle" type="Label" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 40
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 2

[node name="ResultLabel" type="Label" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 32
text = "Black/White Wins"
horizontal_alignment = 1

[node name="RematchSameColor" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Rematch (Same Colors)"

[node name="RematchSwapColor" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Rematch (Swap Colors)
"

[node name="QuitGame" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Quit Game"

[connection signal="pressed" from="Panel/VBoxContainer/RematchSameColor" to="." method="_on_rematch_same_color_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/RematchSwapColor" to="." method="_on_rematch_swap_color_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/QuitGame" to="." method="_on_quit_game_pressed"]
